--- a/Week5_2.ipynb
+++ b/Week5_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Week5_2",
       "provenance": [],
-      "authorship_tag": "ABX9TyMA1BExKTvazmf836++ovZ0",
+      "authorship_tag": "ABX9TyOgLw3wspw5Yq4uuT6APv8W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,45 @@
       "cell_type": "code",
       "metadata": {
         "id": "9bFDtnwO2iuV"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np \n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "%matplotlib inline"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vPxlQwUo3Owi",
+        "outputId": "f0474c3e-71b1-48af-a36e-8de0ba304c93"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6cRGcUVp3YnB"
       },
       "source": [
         ""
